@@ -20,9 +20,16 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.IntConsumer;
 
+import dev.tamboui.layout.Constraint;
+import dev.tamboui.layout.Layout;
 import dev.tamboui.layout.Rect;
+import dev.tamboui.style.Color;
+import dev.tamboui.style.Overflow;
 import dev.tamboui.style.Style;
 import dev.tamboui.terminal.Frame;
 import dev.tamboui.text.Line;
@@ -32,6 +39,8 @@ import dev.tamboui.tui.event.KeyCode;
 import dev.tamboui.tui.event.KeyEvent;
 import dev.tamboui.widgets.block.Block;
 import dev.tamboui.widgets.block.BorderType;
+import dev.tamboui.widgets.block.Borders;
+import dev.tamboui.widgets.block.Title;
 import dev.tamboui.widgets.paragraph.Paragraph;
 import dev.tamboui.widgets.scrollbar.Scrollbar;
 import dev.tamboui.widgets.scrollbar.ScrollbarState;
@@ -42,7 +51,7 @@ import org.apache.camel.util.json.JsonArray;
 import org.apache.camel.util.json.JsonObject;
 import org.apache.camel.util.json.Jsoner;
 
-import static org.apache.camel.dsl.jbang.core.commands.tui.MonitorContext.pollJsonResponse;
+import static org.apache.camel.dsl.jbang.core.commands.tui.TuiHelper.pollJsonResponse;
 
 /**
  * Reusable source code viewer with syntax highlighting, scrolling, and line-number display. Can be used by any tab that
@@ -52,13 +61,31 @@ class SourceViewer {
 
     private boolean visible;
     private List<String> lines = Collections.emptyList();
+    private List<JsonObject> codeData = Collections.emptyList();
     private String title;
     private SyntaxHighlighter.Language language = SyntaxHighlighter.Language.PLAIN;
     private int scrollY;
     private int scrollX;
+    private int selectedLine = -1;
+    private int lastVisibleLines;
+    private boolean pendingScroll;
     private final ScrollbarState vScrollState = new ScrollbarState();
     private final ScrollbarState hScrollState = new ScrollbarState();
     private final AtomicBoolean loading = new AtomicBoolean(false);
+    private IntConsumer onLineSelected;
+    private final Map<String, CachedSource> sourceCache = new ConcurrentHashMap<>();
+    private boolean wordWrap;
+    private final SearchHighlighter search = new SearchHighlighter();
+    private String currentFormat;
+    private String originalFormat;
+    private String currentRouteId;
+    private MonitorContext currentCtx;
+    private String currentPid;
+
+    private record CachedSource(
+            List<String> lines, List<JsonObject> codeData,
+            String sourceLocation, SyntaxHighlighter.Language language) {
+    }
 
     boolean isVisible() {
         return visible;
@@ -66,51 +93,139 @@ class SourceViewer {
 
     void hide() {
         visible = false;
+        onLineSelected = null;
     }
 
     void reset() {
         visible = false;
         lines = Collections.emptyList();
+        codeData = Collections.emptyList();
         title = null;
         scrollY = 0;
         scrollX = 0;
+        selectedLine = -1;
+        pendingScroll = false;
+        onLineSelected = null;
+        sourceCache.clear();
+        wordWrap = false;
+        search.reset();
+        currentFormat = null;
+        originalFormat = null;
+        currentRouteId = null;
+        currentCtx = null;
+        currentPid = null;
+    }
+
+    void setOnLineSelected(IntConsumer callback) {
+        this.onLineSelected = callback;
     }
 
     boolean handleKeyEvent(KeyEvent ke) {
         if (!visible) {
             return false;
         }
-        if (ke.isChar('c') || ke.isCancel()) {
+        if (search.isSearchInputActive()) {
+            boolean handled = search.handleKeyEvent(ke);
+            if (handled && !search.isSearchInputActive() && search.hasFindTerm()) {
+                search.buildFindMatches(lines);
+                selectedLine = search.jumpToNearestMatch(selectedLine);
+            }
+            return handled;
+        }
+        if (ke.isCancel()) {
+            if (search.handleEscape()) {
+                return true;
+            }
             visible = false;
+            onLineSelected = null;
             return true;
         }
-        if (ke.isUp()) {
+        if (ke.isChar('c')) {
+            visible = false;
+            onLineSelected = null;
+            return true;
+        }
+        if (currentRouteId != null) {
+            if (ke.isChar('Y') || ke.isChar('y')) {
+                switchFormat("yaml");
+                return true;
+            }
+            if (ke.isChar('J') || ke.isChar('j')) {
+                switchFormat("java");
+                return true;
+            }
+            if (ke.isChar('X') || ke.isChar('x')) {
+                switchFormat("xml");
+                return true;
+            }
+        }
+        if (search.handleKeyEvent(ke)) {
+            int matchLine = search.currentMatchLine();
+            if (matchLine >= 0) {
+                selectedLine = matchLine;
+            }
+            return true;
+        }
+        if (ke.isChar('w')) {
+            wordWrap = !wordWrap;
+            scrollX = 0;
+            return true;
+        }
+        if (ke.isKey(KeyCode.UP) && ke.hasCtrl()) {
             scrollY = Math.max(0, scrollY - 1);
-        } else if (ke.isDown()) {
+        } else if (ke.isKey(KeyCode.DOWN) && ke.hasCtrl()) {
             scrollY++;
+        } else if (ke.isUp()) {
+            selectedLine = Math.max(0, selectedLine - 1);
+        } else if (ke.isDown()) {
+            if (!lines.isEmpty()) {
+                selectedLine = Math.min(lines.size() - 1, selectedLine + 1);
+            }
         } else if (ke.isPageUp() || ke.isKey(KeyCode.PAGE_UP)) {
-            scrollY = Math.max(0, scrollY - 20);
+            int page = Math.max(1, lastVisibleLines);
+            selectedLine = Math.max(0, selectedLine - page);
         } else if (ke.isPageDown() || ke.isKey(KeyCode.PAGE_DOWN)) {
-            scrollY += 20;
-        } else if (ke.isLeft()) {
+            int page = Math.max(1, lastVisibleLines);
+            if (!lines.isEmpty()) {
+                selectedLine = Math.min(lines.size() - 1, selectedLine + page);
+            }
+        } else if (!wordWrap && ke.isLeft()) {
             scrollX = Math.max(0, scrollX - 1);
-        } else if (ke.isRight()) {
+        } else if (!wordWrap && ke.isRight()) {
             scrollX++;
         } else if (ke.isHome()) {
-            scrollY = 0;
+            selectedLine = 0;
             scrollX = 0;
         } else if (ke.isEnd()) {
-            scrollY = Integer.MAX_VALUE;
+            if (!lines.isEmpty()) {
+                selectedLine = lines.size() - 1;
+            }
+        } else if (ke.isConfirm() && onLineSelected != null) {
+            if (selectedLine >= 0 && selectedLine < codeData.size()) {
+                Integer lineNum = codeData.get(selectedLine).getInteger("line");
+                if (lineNum != null) {
+                    onLineSelected.accept(lineNum);
+                }
+            }
+            return true;
         } else {
             return false;
         }
         return true;
     }
 
+    boolean isSearchInputActive() {
+        return search.isSearchInputActive();
+    }
+
+    void handlePaste(String text) {
+        search.handlePaste(text);
+    }
+
     void render(Frame frame, Rect area) {
         Block block = Block.builder()
-                .borderType(BorderType.ROUNDED)
-                .title(" Source [" + (title != null ? title : "") + "] ")
+                .borderType(BorderType.ROUNDED).borders(Borders.ALL)
+                .title(buildTitle())
                 .build();
         Rect inner = block.inner(area);
         frame.renderWidget(block, area);
@@ -120,45 +235,166 @@ class SourceViewer {
         }
 
         int visibleLines = inner.height();
+        lastVisibleLines = visibleLines;
         int maxScroll = Math.max(0, lines.size() - visibleLines);
+
+        // On initial load, position selected line at 2/3 of viewport
+        if (pendingScroll && selectedLine >= 0) {
+            int twoThirds = visibleLines * 2 / 3;
+            scrollY = Math.max(0, selectedLine - twoThirds);
+            pendingScroll = false;
+        }
+
+        // Auto-scroll to keep selected line visible
+        if (selectedLine >= 0) {
+            if (selectedLine < scrollY) {
+                scrollY = selectedLine;
+            } else if (selectedLine >= scrollY + visibleLines) {
+                scrollY = selectedLine - visibleLines + 1;
+            }
+        }
         scrollY = Math.min(scrollY, maxScroll);
 
-        int maxLineWidth = lines.stream().mapToInt(String::length).max().orElse(0);
-        int maxHScroll = Math.max(0, maxLineWidth - inner.width());
-        scrollX = Math.min(scrollX, maxHScroll);
+        int hSkip = wordWrap ? 0 : scrollX;
+        if (!wordWrap) {
+            int cursorWidth = 3;
+            int maxLineWidth = lines.stream().mapToInt(String::length).max().orElse(0) + cursorWidth;
+            int maxHScroll = Math.max(0, maxLineWidth - inner.width());
+            scrollX = Math.min(scrollX, maxHScroll);
+        }
+
+        int currentMatchLine = search.currentMatchLine();
 
         int end = Math.min(scrollY + visibleLines, lines.size());
         List<Line> visible = new ArrayList<>();
         for (int i = scrollY; i < end; i++) {
             String raw = lines.get(i);
-            visible.add(highlightSourceLine(raw, scrollX));
+            boolean isSelected = (i == selectedLine);
+            Line line = highlightSourceLine(raw, hSkip, isSelected, inner.width());
+            line = search.applyHighlights(line, i, currentMatchLine);
+            visible.add(line);
         }
-        frame.renderWidget(Paragraph.builder().text(Text.from(visible)).build(), inner);
+
+        List<Rect> hChunks = Layout.horizontal()
+                .constraints(Constraint.fill(), Constraint.length(1))
+                .split(inner);
+
+        Overflow overflow = wordWrap ? Overflow.WRAP_WORD : Overflow.CLIP;
+        frame.renderWidget(Paragraph.builder().text(Text.from(visible)).overflow(overflow).build(), hChunks.get(0));
 
         if (lines.size() > visibleLines) {
             vScrollState.contentLength(lines.size()).viewportContentLength(visibleLines).position(scrollY);
-            frame.renderStatefulWidget(Scrollbar.builder().build(), inner, vScrollState);
+            frame.renderStatefulWidget(Scrollbar.builder().build(), hChunks.get(1), vScrollState);
         }
-        if (maxHScroll > 0) {
-            hScrollState.contentLength(maxLineWidth).viewportContentLength(inner.width()).position(scrollX);
-            frame.renderStatefulWidget(Scrollbar.horizontal(), inner, hScrollState);
+        if (!wordWrap) {
+            int cursorWidth = 3;
+            int maxLineWidth = lines.stream().mapToInt(String::length).max().orElse(0) + cursorWidth;
+            int maxHScroll = Math.max(0, maxLineWidth - inner.width());
+            if (maxHScroll > 0) {
+                hScrollState.contentLength(maxLineWidth).viewportContentLength(inner.width()).position(scrollX);
+                frame.renderStatefulWidget(Scrollbar.horizontal(), inner, hScrollState);
+            }
         }
     }
 
     void renderFooter(List<Span> spans) {
-        MonitorContext.hint(spans, "Esc/c", "close");
-        MonitorContext.hint(spans, "↑↓", "scroll");
-        MonitorContext.hint(spans, "←→", "horizontal");
-        MonitorContext.hint(spans, "PgUp/PgDn", "page");
+        search.renderFooterHints(spans);
+        if (search.isSearchInputActive()) {
+            return;
+        }
+        if (search.hasFindTerm()) {
+            search.renderFindStatus(spans);
+        } else {
+            TuiHelper.hint(spans, "Esc/c", "close");
+        }
+        TuiHelper.hint(spans, "↑↓", "navigate");
+        if (currentRouteId != null) {
+            TuiHelper.hint(spans, "Y", "yaml");
+            TuiHelper.hint(spans, "J", "java");
+            TuiHelper.hint(spans, "X", "xml");
+        }
+        search.renderSearchHints(spans);
+        TuiHelper.hint(spans, "w", "wrap" + (wordWrap ? " [on]" : " [off]"));
+        if (!wordWrap) {
+            TuiHelper.hint(spans, "←→", "horizontal");
+        }
+        TuiHelper.hint(spans, "PgUp/PgDn", "page");
+        if (onLineSelected != null) {
+            TuiHelper.hint(spans, "Enter", "select node");
+        }
+    }
+
+    /**
+     * Load source for a route, scrolling to the given source line number.
+     */
+    void loadFile(Path filePath) {
+        currentRouteId = null;
+        currentFormat = null;
+        originalFormat = null;
+        currentCtx = null;
+        currentPid = null;
+        String fileName = filePath.getFileName().toString();
+        try {
+            List<String> rawLines = java.nio.file.Files.readAllLines(filePath, java.nio.charset.StandardCharsets.UTF_8);
+            int lineNumWidth = String.valueOf(rawLines.size()).length();
+            List<String> result = new ArrayList<>();
+            List<JsonObject> codeLines = new ArrayList<>();
+            for (int i = 0; i < rawLines.size(); i++) {
+                int lineNum = i + 1;
+                String code = rawLines.get(i);
+                result.add(String.format("%" + lineNumWidth + "d  %s", lineNum, code));
+                JsonObject jo = new JsonObject();
+                jo.put("line", lineNum);
+                jo.put("code", code);
+                codeLines.add(jo);
+            }
+            title = fileName;
+            language = SyntaxHighlighter.detectLanguage(fileName);
+            lines = result;
+            codeData = codeLines;
+            selectedLine = findLicenseHeaderEnd(codeLines);
+            scrollY = 0;
+            scrollX = 0;
+            pendingScroll = true;
+            visible = true;
+        } catch (java.io.IOException e) {
+            title = fileName;
+            lines = List.of("(Failed to read file: " + e.getMessage() + ")");
+            codeData = Collections.emptyList();
+            visible = true;
+        }
     }
 
     /**
      * Load source for a route, scrolling to the given source line number.
      */
     void loadSource(MonitorContext ctx, String routeId, int targetLine) {
+        loadSource(ctx, routeId, targetLine, null);
+    }
+
+    void loadSource(MonitorContext ctx, String routeId, int targetLine, String sourceLocationHint) {
         if (ctx.selectedPid == null || ctx.runner == null) {
             return;
         }
+
+        String pid = ctx.selectedPid;
+        currentRouteId = routeId;
+        currentCtx = ctx;
+        currentPid = pid;
+        String cacheKey = pid + ":" + routeId;
+        CachedSource cached = sourceCache.get(cacheKey);
+        if (cached == null && sourceLocationHint != null) {
+            String locKey = pid + ":loc:" + sourceLocationHint;
+            cached = sourceCache.get(locKey);
+            if (cached != null) {
+                sourceCache.put(cacheKey, cached);
+            }
+        }
+        if (cached != null) {
+            applyCached(ctx, routeId, cached, targetLine);
+            return;
+        }
+
         if (!loading.compareAndSet(false, true)) {
             return;
         }
@@ -169,7 +405,6 @@ class SourceViewer {
         scrollX = 0;
         visible = true;
 
-        String pid = ctx.selectedPid;
         ctx.runner.scheduler().execute(() -> {
             try {
                 loadInBackground(ctx, pid, routeId, targetLine);
@@ -177,6 +412,45 @@ class SourceViewer {
                 loading.set(false);
             }
         });
+    }
+
+    private void applyCached(MonitorContext ctx, String routeId, CachedSource cached, int targetLine) {
+        int matchIdx = -1;
+        for (int i = 0; i < cached.codeData.size(); i++) {
+            Integer lineNum = cached.codeData.get(i).getInteger("line");
+            if (targetLine > 0 && lineNum != null && lineNum == targetLine) {
+                matchIdx = i;
+                break;
+            }
+            Boolean match = cached.codeData.get(i).getBoolean("match");
+            if (targetLine <= 0 && Boolean.TRUE.equals(match) && matchIdx < 0) {
+                matchIdx = i;
+            }
+        }
+
+        int cursorLine;
+        if (matchIdx >= 0) {
+            cursorLine = matchIdx;
+        } else {
+            cursorLine = findLicenseHeaderEnd(cached.codeData);
+        }
+
+        String displayLoc = cached.sourceLocation != null
+                ? FileUtil.stripPath(LoggerHelper.sourceNameOnly(cached.sourceLocation)) : null;
+        title = displayLoc != null ? routeId + "  " + displayLoc : routeId;
+        language = cached.language;
+        lines = cached.lines;
+        codeData = cached.codeData;
+        selectedLine = Math.max(0, cursorLine);
+        scrollY = 0;
+        scrollX = 0;
+        pendingScroll = true;
+        visible = true;
+        String fmt = languageToFormat(cached.language);
+        if (fmt != null) {
+            originalFormat = fmt;
+            currentFormat = fmt;
+        }
     }
 
     private void loadInBackground(MonitorContext ctx, String pid, String routeId, int targetLine) {
@@ -194,13 +468,14 @@ class SourceViewer {
         PathUtils.deleteFile(outputFile);
 
         if (jo == null) {
-            applyResult(ctx, routeId, null, List.of("(No response from integration)"), 0);
+            applyResult(ctx, routeId, null, List.of("(No response from integration)"), Collections.emptyList(), 0, -1);
             return;
         }
 
         JsonArray routes = (JsonArray) jo.get("routes");
         if (routes == null || routes.isEmpty()) {
-            applyResult(ctx, routeId, null, List.of("(No source available for route: " + routeId + ")"), 0);
+            applyResult(ctx, routeId, null, List.of("(No source available for route: " + routeId + ")"),
+                    Collections.emptyList(), 0, -1);
             return;
         }
 
@@ -208,7 +483,8 @@ class SourceViewer {
         String sourceLocation = objToString(routeObj.get("source"));
         List<JsonObject> codeLines = routeObj.getCollection("code");
         if (codeLines == null || codeLines.isEmpty()) {
-            applyResult(ctx, routeId, sourceLocation, List.of("(No source code available)"), 0);
+            applyResult(ctx, routeId, sourceLocation, List.of("(No source code available)"),
+                    Collections.emptyList(), 0, -1);
             return;
         }
 
@@ -241,15 +517,33 @@ class SourceViewer {
         }
 
         int scrollTo;
+        int cursorLine;
         if (matchIdx >= 0) {
-            scrollTo = Math.max(0, matchIdx - 2);
+            cursorLine = matchIdx;
+            scrollTo = matchIdx;
         } else {
-            scrollTo = findLicenseHeaderEnd(codeLines);
+            cursorLine = findLicenseHeaderEnd(codeLines);
+            scrollTo = cursorLine;
         }
-        applyResult(ctx, routeId, sourceLocation, result, scrollTo);
+
+        SyntaxHighlighter.Language lang = SyntaxHighlighter.detectLanguage(sourceLocation);
+        CachedSource cached = new CachedSource(result, codeLines, sourceLocation, lang);
+        String cacheKey = pid + ":" + routeId;
+        sourceCache.put(cacheKey, cached);
+        if (sourceLocation != null) {
+            sourceCache.put(pid + ":loc:" + sourceLocation, cached);
+        }
+        String fmt = languageToFormat(lang);
+        if (fmt != null) {
+            sourceCache.put(pid + ":" + routeId + ":" + fmt, cached);
+        }
+
+        applyResult(ctx, routeId, sourceLocation, result, codeLines, scrollTo, cursorLine);
     }
 
-    private void applyResult(MonitorContext ctx, String routeId, String location, List<String> resultLines, int scrollTo) {
+    private void applyResult(
+            MonitorContext ctx, String routeId, String location,
+            List<String> resultLines, List<JsonObject> codeLines, int scrollTo, int cursorLine) {
         if (ctx.runner == null) {
             return;
         }
@@ -261,11 +555,189 @@ class SourceViewer {
             title = displayLoc != null ? routeId + "  " + displayLoc : routeId;
             language = SyntaxHighlighter.detectLanguage(location);
             lines = resultLines;
-            scrollY = scrollTo;
+            codeData = codeLines;
+            selectedLine = Math.max(0, cursorLine);
+            scrollY = 0;
+            pendingScroll = true;
+            if (currentRouteId != null) {
+                String fmt = languageToFormat(language);
+                if (fmt != null) {
+                    originalFormat = fmt;
+                    currentFormat = fmt;
+                }
+            }
         });
     }
 
-    private Line highlightSourceLine(String raw, int hSkip) {
+    private Title buildTitle() {
+        String info = title != null ? title : "";
+        if (currentRouteId == null) {
+            return Title.from(Line.from(List.of(Span.raw(" Source [" + info + "] "))));
+        }
+
+        List<Span> spans = new ArrayList<>();
+        spans.add(Span.raw(" Source [" + info + "]  "));
+
+        String[] formats = { "yaml", "java", "xml" };
+        String[] labels = { "YAML", "Java", "XML" };
+
+        for (int i = 0; i < formats.length; i++) {
+            if (i > 0) {
+                spans.add(Span.styled(" │ ", Style.EMPTY.dim()));
+            }
+            String label = labels[i];
+            if (formats[i].equals(originalFormat)) {
+                label += "*";
+            }
+            if (formats[i].equals(currentFormat)) {
+                spans.add(Span.styled(label, Style.EMPTY.bold()));
+            } else {
+                spans.add(Span.styled(label, Style.EMPTY.dim()));
+            }
+        }
+        spans.add(Span.raw(" "));
+
+        return Title.from(Line.from(spans));
+    }
+
+    private void switchFormat(String format) {
+        if (format.equals(currentFormat)) {
+            return;
+        }
+        if (currentPid == null || currentRouteId == null || currentCtx == null) {
+            return;
+        }
+
+        String cacheKey = currentPid + ":" + currentRouteId + ":" + format;
+        CachedSource cached = sourceCache.get(cacheKey);
+        if (cached != null) {
+            lines = cached.lines;
+            codeData = cached.codeData;
+            language = cached.language;
+            currentFormat = format;
+            selectedLine = findLicenseHeaderEnd(codeData);
+            scrollY = 0;
+            scrollX = 0;
+            pendingScroll = true;
+            search.reset();
+            return;
+        }
+
+        if (!loading.compareAndSet(false, true)) {
+            return;
+        }
+
+        lines = List.of("(Loading " + format + " format...)");
+        currentFormat = format;
+        scrollY = 0;
+        scrollX = 0;
+
+        MonitorContext ctx = currentCtx;
+        String pid = currentPid;
+        String routeId = currentRouteId;
+        ctx.runner.scheduler().execute(() -> {
+            try {
+                if (format.equals(originalFormat)) {
+                    loadInBackground(ctx, pid, routeId, 0);
+                } else {
+                    loadFormatInBackground(ctx, pid, routeId, format);
+                }
+            } finally {
+                loading.set(false);
+            }
+        });
+    }
+
+    private void loadFormatInBackground(MonitorContext ctx, String pid, String routeId, String format) {
+        Path outputFile = ctx.getOutputFile(pid);
+        PathUtils.deleteFile(outputFile);
+
+        JsonObject root = new JsonObject();
+        root.put("action", "route-dump");
+        root.put("filter", routeId);
+        root.put("format", format);
+        root.put("uriAsParameters", "yaml".equals(format) ? "true" : "false");
+
+        Path actionFile = ctx.getActionFile(pid);
+        PathUtils.writeTextSafely(root.toJson(), actionFile);
+
+        JsonObject jo = pollJsonResponse(outputFile, 5000);
+        PathUtils.deleteFile(outputFile);
+
+        if (jo == null) {
+            applyFormatResult(ctx, format, List.of("(No response from integration)"), Collections.emptyList());
+            return;
+        }
+
+        JsonArray routes = (JsonArray) jo.get("routes");
+        if (routes == null || routes.isEmpty()) {
+            applyFormatResult(ctx, format,
+                    List.of("(No dump available for route: " + routeId + ")"), Collections.emptyList());
+            return;
+        }
+
+        JsonObject routeObj = (JsonObject) routes.get(0);
+        List<JsonObject> codeLines = routeObj.getCollection("code");
+        if (codeLines == null || codeLines.isEmpty()) {
+            applyFormatResult(ctx, format, List.of("(No code available)"), Collections.emptyList());
+            return;
+        }
+
+        List<String> result = new ArrayList<>();
+        int lineNumWidth = String.valueOf(codeLines.size()).length();
+        for (int i = 0; i < codeLines.size(); i++) {
+            String code = Jsoner.unescape(objToString(codeLines.get(i).get("code")));
+            result.add(String.format("%" + lineNumWidth + "d  %s", i + 1, code));
+        }
+
+        SyntaxHighlighter.Language lang = formatToLanguage(format);
+        CachedSource cached = new CachedSource(result, codeLines, null, lang);
+        sourceCache.put(pid + ":" + routeId + ":" + format, cached);
+
+        applyFormatResult(ctx, format, result, codeLines);
+    }
+
+    private void applyFormatResult(
+            MonitorContext ctx, String format,
+            List<String> resultLines, List<JsonObject> codeLines) {
+        if (ctx.runner == null) {
+            return;
+        }
+        ctx.runner.runOnRenderThread(() -> {
+            if (!visible) {
+                return;
+            }
+            language = formatToLanguage(format);
+            lines = resultLines;
+            codeData = codeLines;
+            currentFormat = format;
+            selectedLine = findLicenseHeaderEnd(codeLines);
+            scrollY = 0;
+            scrollX = 0;
+            pendingScroll = true;
+            search.reset();
+        });
+    }
+
+    private static String languageToFormat(SyntaxHighlighter.Language lang) {
+        return switch (lang) {
+            case YAML -> "yaml";
+            case JAVA -> "java";
+            case XML -> "xml";
+            default -> null;
+        };
+    }
+
+    private static SyntaxHighlighter.Language formatToLanguage(String format) {
+        return switch (format) {
+            case "yaml" -> SyntaxHighlighter.Language.YAML;
+            case "java" -> SyntaxHighlighter.Language.JAVA;
+            case "xml" -> SyntaxHighlighter.Language.XML;
+            default -> SyntaxHighlighter.Language.PLAIN;
+        };
+    }
+
+    private Line highlightSourceLine(String raw, int hSkip, boolean isSelected, int viewportWidth) {
         int prefixEnd = 0;
         while (prefixEnd < raw.length() && (raw.charAt(prefixEnd) == ' ' || Character.isDigit(raw.charAt(prefixEnd)))) {
             prefixEnd++;
@@ -277,31 +749,53 @@ class SourceViewer {
         Line highlighted = SyntaxHighlighter.highlightLine(code, language);
 
         List<Span> spans = new ArrayList<>();
-        if (!prefix.isEmpty()) {
-            spans.add(Span.styled(prefix, Style.EMPTY.dim()));
+        Style selBg = Style.EMPTY.bg(Color.rgb(30, 45, 70));
+        if (isSelected) {
+            spans.add(Span.styled(">> ", Style.EMPTY.fg(Color.YELLOW).bold()));
+            if (!prefix.isEmpty()) {
+                spans.add(Span.styled(prefix, Style.EMPTY.fg(Color.YELLOW).bold().patch(selBg)));
+            }
+            for (Span s : highlighted.spans()) {
+                spans.add(Span.styled(s.content(), s.style().patch(selBg)));
+            }
+        } else {
+            spans.add(Span.raw("   "));
+            if (!prefix.isEmpty()) {
+                spans.add(Span.styled(prefix, Style.EMPTY.dim()));
+            }
+            spans.addAll(highlighted.spans());
         }
-        spans.addAll(highlighted.spans());
 
         Line full = Line.from(spans);
 
-        if (hSkip <= 0) {
-            return full;
+        if (hSkip > 0) {
+            List<Span> scrolled = new ArrayList<>();
+            int skipped = 0;
+            for (Span span : full.spans()) {
+                String content = span.content();
+                if (skipped >= hSkip) {
+                    scrolled.add(span);
+                } else if (skipped + content.length() > hSkip) {
+                    int offset = hSkip - skipped;
+                    scrolled.add(Span.styled(content.substring(offset), span.style()));
+                    skipped = hSkip;
+                } else {
+                    skipped += content.length();
+                }
+            }
+            full = scrolled.isEmpty() ? Line.from(List.of(Span.raw(""))) : Line.from(scrolled);
         }
-        List<Span> scrolled = new ArrayList<>();
-        int skipped = 0;
-        for (Span span : full.spans()) {
-            String content = span.content();
-            if (skipped >= hSkip) {
-                scrolled.add(span);
-            } else if (skipped + content.length() > hSkip) {
-                int offset = hSkip - skipped;
-                scrolled.add(Span.styled(content.substring(offset), span.style()));
-                skipped = hSkip;
-            } else {
-                skipped += content.length();
+
+        if (isSelected && viewportWidth > 0) {
+            int contentWidth = full.width();
+            if (contentWidth < viewportWidth) {
+                List<Span> padded = new ArrayList<>(full.spans());
+                padded.add(Span.styled(" ".repeat(viewportWidth - contentWidth), selBg));
+                full = Line.from(padded);
             }
         }
-        return scrolled.isEmpty() ? Line.from(List.of(Span.raw(""))) : Line.from(scrolled);
+
+        return full;
     }
 
     static int findLicenseHeaderEnd(List<JsonObject> codeLines) {
